# auth_api/src/db/db_models.py
@@ -1,6 +1,7 @@
 import uuid
+from sqlalchemy import ForeignKey
 from sqlalchemy.dialects.postgresql import UUID
-from db import db
+from db.db import db
 
 
 class User(db.Model):
@@ -11,4 +12,31 @@ class User(db.Model):
     password = db.Column(db.String, nullable=False)
 
     def __repr__(self):
-        return f'<User {self.login}>' 
+        return f'<User {self.login}>'
+
+
+class LoginHistory(db.Model):
+    __tablename__ = 'login_history'
+
+    id = db.Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, unique=True, nullable=False)
+    user_id = db.Column(UUID(as_uuid=True), ForeignKey(User.id))
+    user_agent = db.Column(db.String, nullable=False)
+    auth_date = db.Column(db.DateTime, nullable=False)
+
+
+class Roles(db.Model):
+    __tablename__ = 'roles'
+
+    id = db.Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, unique=True, nullable=False)
+    name = db.Column(db.String, unique=True, nullable=False)
+
+    def __repr__(self):
+        return f'<Roles {self.name}>'
+
+
+class UsersRoles(db.Model):
+    __tablename__ = 'users_roles'
+
+    id = db.Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, unique=True, nullable=False)
+    user_id = db.Column(UUID(as_uuid=True), ForeignKey(User.id))
+    role_id = db.Column(UUID(as_uuid=True), ForeignKey(Roles.id))
